corrected the line break in main menu

--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -817,7 +817,7 @@ footer img{
         margin-bottom: 120px;
     }
     nav, .menu-holder address{
-        width: 700px;
+        width: 710px;
     }
     nav ul {
         font-size: 40px;
@@ -1384,7 +1384,7 @@ footer img{
         margin-bottom: 120px;
     }
     nav, .menu-holder address{
-        width: 980px;
+        width: 996px;
     }
     nav ul {
         font-size: 48px;
@@ -1503,7 +1503,7 @@ footer img{
         margin-bottom: 140px;
     }
     nav, .menu-holder address{
-        width: 1140px;
+        width: 1150px;
     }
     nav ul {
         font-size: 60px;
